Eventos + Sala de imprensa + Parceiros + curriculo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -69,7 +69,7 @@
 		</section>
 
 		<section id="logo">
-			<a href="{{ site.url }}" class="container">
+			<a href="index.html" class="container">
 				<img src="{{ site.url }}img/logo-sindeventos.png" alt="">
 			</a>
 		</section>
@@ -84,10 +84,17 @@
 				</nav>
 				-->
 				<nav>
-					<a href="index.html" title="Home">Home</a>
 					<a href="o_sindicato.html" title="O Sindicato">O Sindicato</a>
 					<a href="servicos.html" title="Serviços">Serviços</a>
+					<a href="sindicalizados.html" title="Serviços">Sindicalizados</a>
+					<a href="eventos.html" title="Eventos">Eventos</a>
+					<a href="sala_de_imprensa.html" title="Sala de imprensa">Sala de imprensa</a>
+					<a href="parceiros.html" title="parceiros">parceiros e convênios</a>
+					<a href="curriculo.html" title="curriculo">envio de curriculo</a>
+					<a href="download.html" title="download">download</a>
+					<a href="contato.html" title="contato">contato</a>
 					<!--
+					<a href="index.html" title="Home">Home</a>
 					<a href=".html" title=""></a>
 					-->
 				</nav>
