Contato + associe-se + cursos + licitacoes + dicas + uteis

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,13 +39,14 @@
 					</nav>
 				</div>
 				<nav>
-					<a href="#" title="">Associe-se</a>
-					<a href="#" title="">cursos</a>
-					<a href="#" title="">Licitações</a>
-					<a href="#" title="">Dicas e assessoria</a>
-					<a href="#" title="">informações úteis</a>
-					<a href="#" title="">distâncias</a>
-					<a href="#" title="">área restrita</a>
+					<a href="associe-se.html" title="">Associe-se</a>
+					<a href="cursos.html" title="">cursos</a>
+					<a href="licitacoes.html" title="">Licitações</a>
+					<a href="dicas.html" title="">Dicas e assessoria</a>
+					<a href="uteis.html" title="">informações úteis</a>
+					<a href="distacias.html" title="">distâncias</a>
+					<a href=".html" title="">newsletter</a>
+					<a href=".html" title="">área restrita</a>
 				</nav>
 			</div>
 		</section>
