--- a/sass/_formStyles.sass
+++ b/sass/_formStyles.sass
@@ -86,7 +86,7 @@ input[type="text"]
 		background: $corBotao url(../img/form-radio-w.png) center center no-repeat
 		+animate(pulseCheck)
 
-input[type="submit"], button
+input[type="submit"], input[type="button"], button
 	+button3d
 
 
