--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -46,7 +46,7 @@ body
 					line-height: 50px
 
 				.cidade
-					+grid(3, $gutter-width: 0)
+					+grid(2, $gutter-width: 0)
 					border-right: 1px solid rgba($black, 0.05)
 					margin-right: -1px
 
@@ -64,6 +64,7 @@ body
 							top: 0
 							right: 10px
 							font-size: 20px
+							line-height: 50px
 					& > nav
 						background: $brancoCinza
 						+grid(3, $gutter-width: 0)
@@ -75,7 +76,7 @@ body
 							border-top: 1px solid rgba($black, 0.05)
 
 				nav
-					+grid(9, $gutter-width: 0)
+					+grid(10, $gutter-width: 0)
 					a
 						padding: 0 20px
 						display: inline-block
@@ -539,6 +540,16 @@ body
 						margin-bottom: 10px
 						font-weight: 700
 
+					.date
+						display: block
+						font-size: 14px
+						color: $cinza
+						padding-bottom: 10px
+						border-bottom: 1px solid rgba(0,0,0,0.2)
+						margin-bottom: 10px
+						b
+							font-weight: 700
+							margin-left: 5px
 					&:hover
 						background: $verde
 						*
@@ -714,7 +725,7 @@ body
 					font-weight: 700
 					text-transform: uppercase
 
-				& > input[type="submit"], & > button
+				& > input[type="submit"], & > input[type="button"], & > button
 					float: right
 					margin-right: 20px
 					display: block
@@ -723,6 +734,53 @@ body
 
 
 
+// ------------------------------------------------------------------
+// Content - contatos
+// ------------------------------------------------------------------
+
+body 
+	#contentWrapper
+		.wrapper 
+			.map
+				p
+					font-size: 16px
+					b
+						display: block
+						font-size: 14px
+						margin-bottom: -5px
+
+
+// ------------------------------------------------------------------
+// Content - Uteis
+// ------------------------------------------------------------------
+
+body 
+	#contentWrapper
+		.wrapper 
+			.uteis
+				& > div
+					display: block
+					background: $brancoCinza
+					+box-sizing(border-box)
+					padding: 20px
+					+bordinha
+
+					h3
+						margin-bottom: 10px
+						font-weight: 700
+
+					p
+						display: block
+						font-size: 14px
+						color: $cinzaEscuro
+						margin-bottom: 10px
+						b
+							font-weight: 700
+							margin-left: 5px
+					&:hover
+						background: $verde
+						*
+							color: $brancoCinza
 
 
 // ------------------------------------------------------------------
@@ -985,6 +1043,22 @@ body
 // ------------------------------------------------------------------
 // PAGE GENERAL
 // ------------------------------------------------------------------
+body 
+	#contentWrapper
+		.wrapper 
+			.bigTitle
+				h2
+					color: $verde
+					font-size: 120px
+					letter-spacing: -5px
+					text-align: center
+					display: block
+					margin-bottom: -10px
+
+				p
+					font-size: 20px
+					font-weight: 700
+					text-align: center
 
 #pageHeader
 	background: $brancoCinza
