--- a/_includes/header.html
+++ b/_includes/header.html
@@ -67,7 +67,7 @@
 		<section id="topMenu">
 			<div class="container">
 				<div class="cidade">
-					<a href="#" title="">Brasília</a>
+					<a href="cidade.html" title="">Brasília</a>
 					<!--
 					<nav>
 						<a href="#" title="">Goiania</a>
@@ -85,7 +85,7 @@
 					<a href="licitacoes.html" title="">Licitações</a>
 					<a href="dicas.html" title="">Dicas e assessoria</a>
 					<a href="uteis.html" title="">informações úteis</a>
-					<a href="distacias.html" title="">distâncias</a>
+					<a href="distancias.html" title="">distâncias</a>
 					<a href=".html" title="" class="newsletter_link">newsletter</a>
 					<a href=".html" title="" class="login_link">área restrita</a>
 				</nav>
