--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -199,6 +199,28 @@ h6
 	font-size: $titleSize - 26
 
 
+table
+	width: 100%
+	border: 1px solid $cinzaClaro
+	thead
+		background: $corPrincipal
+		th
+			font-weight: 700
+			color: $corPrincipalInverso
+			width: 16.6%
+	td, th
+		padding: 10px
+		font-size: 14px
+		color: $cinzaEscuro
+		line-height: 100%
+		text-align: center
 
+	td:first-child
+		font-weight: 700
+		text-align: left
+		background: rgba(#f0ede8, 0.2)
+
+	tr:nth-of-type(2n+2)
+		background: $brancoCinza
 
 
