--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,6 +50,7 @@
 	<script src="{{ site.url }}js/libs/moment.min.js"></script>
 	<script src="{{ site.url }}js/libs/daterangepicker.js"></script>
 	<script src="{{ site.url }}js/libs/jquery.flexslider-min.js"></script>
+	<script src="{{ site.url }}js/libs/jquery.multiple.select.js"></script>
 
 	<script src="{{ site.url }}js/script.js"></script>
 
