--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -51,12 +51,12 @@
 							<option>Omega</option>
 						</select>
 
-						<button type="">Pesquisar</button>
+						<button type="" class="button">Pesquisar</button>
 					</form>
 				</div>
 
 				<div class="accord-header active">pesquisar por evento</div>
-				<div class="accord-content pesquisa">
+				<div class="accord-content pesquisa active">
 					<form action="" method="get" accept-charset="utf-8">
 						<select>
 							<option>Escolha o tipo de evento</option>
@@ -82,6 +82,22 @@
 							<option>Kappa</option>
 							<option>Omega</option>
 						</select>
+						
+						<select multiple="multiple" class="multiple-select">
+							<option>Bairro</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+							<option>Bairro</option>
+							<option>Alpha</option>
+							<option>Betta</option>
+							<option>Gama</option>
+							<option>Kappa</option>
+							<option>Omega</option>
+						</select>
+
 						<select class="uf">
 							<option>UF</option>
 							<option>Alpha</option>
@@ -112,7 +128,7 @@
 							<input type="text" name="dataPesquisa" id="dataPesquisa" value="" /> 
 						</div>
 
-						<button type="">Pesquisar</button>
+						<button type="" class="button">Pesquisar</button>
 					</form>
 				</div>
 			</section>
