--- a/sass/style.sass
+++ b/sass/style.sass
@@ -17,6 +17,7 @@
 // Plugin css
 @import ../css/daterangepicker-bs3.css
 @import ../css/flexslider.css
+@import ../css/multiple-select.css
 
 // Aqui vai os estilos
 @import base
