--- a/sass/_formStyles.sass
+++ b/sass/_formStyles.sass
@@ -12,7 +12,7 @@ input, input[type="submit"], button, input[type="checkbox"], input[type="radio"]
 	&:focus
 		outline: none
 
-input, input[type="text"], select, textarea
+input, input[type="text"], select, textarea, .ms-parent > button
 	display: block
 	float: none
 	position: relative
@@ -26,6 +26,7 @@ input, input[type="text"], select, textarea
 	+box-sizing(border-box)
 	margin: 10px 0
 	width: 100%
+	+font(400)
 	&:focus
 		border-color: $corPrincipal
 		color: $corPrincipal
@@ -73,6 +74,9 @@ input[type="text"]
 	&:checked
 		background: $corBotao url(../img/form-checkbox-w.png) center center no-repeat
 		+animate(pulseCheck)
+
+input[type="checkbox"]
+	+checkbox
 
 @mixin radio
 	background: $brancoCinza
