Responsivo IPAD + IPAD Landscape

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -89,7 +89,7 @@
 
 		<section id="logoWrapper">
 			<div class="container">
-				<a href="index.html">
+				<a href="index.html" class="logo">
 					<img src="{{ site.url }}img/logo-sindeventos2.png" alt="">
 				</a>
 				<a href="http://google.com" target="blank" class="topBanner">
