--- a/sass/_mobile.sass
+++ b/sass/_mobile.sass
@@ -1,9 +1,7 @@
 // ------------------------------------------------------------------
 // Mobile Phones
 // ------------------------------------------------------------------
-@media screen and (max-width: 640px)
-	//$ninesixty-gutter-width: 40px !default
-	//$ninesixty-grid-width: 60px !default
+@media screen and (max-width: 480px)
 
 
 
@@ -14,13 +12,412 @@
 // ------------------------------------------------------------------
 // IPAD
 // ------------------------------------------------------------------
-@media screen and (min-device-width : 641px) and (max-device-width: 1024px)
+@media screen and (min-width : 480px) and (max-width: 800px)
+
+	body 
+		$ninesixty-gutter-width: 10px !default
+		$ninesixty-grid-width: 760px !default
+
+		$titleSize: 30px
+		h1
+			font-size: $titleSize
+
+		h2
+			font-size: $titleSize - 8
+
+		h3
+			font-size: $titleSize - 12
+
+		h4
+			font-size: $titleSize - 16
+
+		h5
+			font-size: $titleSize - 18
+
+		h6
+			font-size: $titleSize - 20
+
+		header
+			& > section#topMenu
+				.lang
+					left: auto
+					right: 0
+					top: 50px
+					a
+						padding: 0 5px
+				nav
+					margin-right: 0
+					margin-left: 0
+					width: 740px
+					text-align: center
+					display: block
+					margin-left: auto
+					margin-right: auto
+					float: none
+
+					a
+						padding: 0 7px
+						font-size: 11px
+
+			section#logoWrapper
+				height: 190px
+
+				.topBanner
+					float: none
+					margin: 0 auto
+					width: 700px
+
+				.logo
+					margin: 0 auto
+					float: none
+					margin-bottom: 20px
+
+			& > section#menu nav
+				width: 760px
+				margin: 0
+
+				a
+					font-size: 13px
+					padding: 0 15px
+
+		#banner ul li a
+			right: 100px
+
+		.associe-se
+			font-size: 36px
+			line-height: 36px
+			span
+				font-size: 18px
+			&:hover
+				font-size: 24px
+				span
+					font-size: 24px
+
+		.container, .wrapper
+			width: 740px
+			display: block
+			margin-left: auto
+			margin-right: auto
+
+		#pageHeader a.associe-se 
+			width: 240px
+
+		#contentWrapper 
+			width: 760px
+			display: block
+			margin-left: auto
+			margin-right: auto
+			float: none
+
+			.wrapper
+				width: 740px
+				float: none
+				& > *
+					width: 720px
+					margin-left: 10px
+					margin-right: 10px
+				.eventos > div > a
+					width: 358px
+
+				.equipe
+					$ninesixty-grid-width: 740px
+					$ninesixty-gutter-width: 10px 
+					+grid-system(12)
+
+					.greenTitle
+						+grid(12)
+						+greenTitle
+
+					li
+						+grid(4, $gutter-width: 0)
+
+
+				.listHorizontal, .sindicalizar
+					$ninesixty-grid-width: 740px
+					$ninesixty-gutter-width: 10px 
+					+grid-system(12)
+
+					.greenTitle, & > p
+						+grid(12)
+
+					.greenTitle
+						+greenTitle
+
+					& > div
+						+grid(4, $gutter-width: 0)
+
+					a
+						+grid(12)
+						padding: 20px 10px
+
+						& > img
+							width: 200px
+
+				form
+					$ninesixty-grid-width: 740px
+					$ninesixty-gutter-width: 10px 
+					+grid-system(12)
+
+					.greenTitle
+						+grid(12)
+
+					& > div
+						+grid(12)
+
+					& > input[type="submit"], & > input[type="button"], & > button
+						margin-right: 5px
+
+				.distanciaTable
+					$ninesixty-grid-width: 740px
+					$ninesixty-gutter-width: 10px 
+					+grid-system(12)
+					form
+						& > div
+							+grid(6)
+
+			#sidebar
+				width: 720px
+				display: block
+				margin-left: auto
+				margin-right: auto
+				float: none
+				
+				.widget
+
+					h2
+						font-size: 16px
+
+				#pesquisar.accordion .accord-content form
+					padding-left: 10px
+					padding-right: 10px
+
+					select, input, .ms-parent
+						margin: 0 5px 10px 5px
+						width: 340px
+					.ms-parent
+						margin-bottom: 0 !important
+					.uf
+						width: 70px
+					.cidade
+						width: 160px
+					.bairro
+						width: 150px
+					.periodo
+						label
+							width: 65px
+						input
+							width: 215px
+		.paginator a
+			margin-left: 7px !important
+			margin-right: 7px !important
+
+		footer > ul
+			margin-top: 20px
+			li
+				$ninesixty-grid-width: 740px
+				$ninesixty-gutter-width: 10px 
+				+grid(4)
+				margin-top: 30px
+
+
+		.modal
+			$ninesixty-grid-width: 740px
+			$ninesixty-gutter-width: 10px 
+
+			h1, h2
+				+grid(12)
+
+			.grid_4
+				+grid(4)
+
+			input[type="button"]
+				width: 100%
+				margin-right: 0
+
+			&.newsletter
+				input[type="button"]
+					+grid(4)
+					float: right
 
 
 
 
+// ------------------------------------------------------------------
+// IPAD Landscape
+// ------------------------------------------------------------------
+@media screen and (min-width : 800px) and (max-width: 1200px)
+
+	body 
+		$ninesixty-gutter-width: 10px !default
+		$ninesixty-grid-width: 960px !default
+
+		$titleSize: 36px
+		h1
+			font-size: $titleSize
+
+		h2
+			font-size: $titleSize - 8
+
+		h3
+			font-size: $titleSize - 12
+
+		h4
+			font-size: $titleSize - 16
+
+		h5
+			font-size: $titleSize - 18
+
+		h6
+			font-size: $titleSize - 20
+
+		header
+			& > section#topMenu
+				.lang
+					left: -5px
+					a
+						padding: 0 5px
+				nav
+					margin-right: 10px
+					width: 840px
+
+					a
+						padding: 0 10px
+			section#logoWrapper
+				padding-bottom: 0
+
+				.topBanner
+					width: 660px
+
+				.logo
+					width: 270px
+			& > section#menu nav
+				width: 960px
+				margin: 0
+
+				a
+					font-size: 12px
+					padding: 0 7px
+
+		.container, .wrapper
+			width: 960px
+			display: block
+			margin-left: auto
+			margin-right: auto
+
+		#contentWrapper 
+			width: 960px
+			display: block
+			margin-left: auto
+			margin-right: auto
+
+			.wrapper
+				width: 620px
+				& > *
+					width: 600px
+					margin-left: 10px
+					margin-right: 10px
+				.eventos > div > a
+					width: 298px
+
+				.equipe
+					$ninesixty-grid-width: 620px
+					$ninesixty-gutter-width: 10px 
+					+grid-system(12)
+
+					.greenTitle
+						+grid(12)
+						+greenTitle
+
+					li
+						+grid(4, $gutter-width: 0)
 
 
+				.listHorizontal, .sindicalizar
+					$ninesixty-grid-width: 620px
+					$ninesixty-gutter-width: 10px 
+					+grid-system(12)
+
+					.greenTitle, & > p
+						+grid(12)
+
+					.greenTitle
+						+greenTitle
+
+					& > div
+						+grid(4, $gutter-width: 0)
+
+					a
+						+grid(12)
+						padding: 20px 10px
+
+						& > img
+							width: 200px
+
+				form
+					$ninesixty-grid-width: 620px
+					+grid-system(12)
+
+					.greenTitle
+						+grid(12)
+
+					& > div
+						+grid(12)
+
+					& > input[type="submit"], & > input[type="button"], & > button
+						margin-right: 5px
+
+				.distanciaTable
+					$ninesixty-grid-width: 620px
+					$ninesixty-gutter-width: 10px 
+					+grid-system(12)
+					form
+						& > div
+							+grid(6)
+
+			#sidebar
+				width: 320px
+				margin-left: 10px
+				margin-right: 10px
+				
+				.widget h2
+					font-size: 16px
+
+				#pesquisar.accordion .accord-content form
+					.uf
+						width: 80px
+					.cidade
+						width: 190px
+						margin-right: 0
+					.bairro
+						width: 280px
+					.periodo
+						label
+							width: 65px
+						input
+							width: 215px
+		.paginator a
+			margin-left: 7px !important
+			margin-right: 7px !important
+
+		footer > ul li
+			$ninesixty-gutter-width: 10px
+			$ninesixty-grid-width: 960px
+			+grid(2)
+
+
+		.modal
+			$ninesixty-gutter-width: 10px
+			$ninesixty-grid-width: 960px
+
+			h1, h2
+				+grid(12)
+
+			.grid_4
+				+grid(4)
+
+			input[type="button"]
+				margin-right: 5px
+				width: 300px
 
 // ------------------------------------------------------------------
 // Desktops
