--- a/_includes/header.html
+++ b/_includes/header.html
@@ -107,7 +107,7 @@
 				{% endfor %}
 				</nav>
 				-->
-				<nav>
+				<nav id="nav">
 					<a href="o_sindicato.html" title="O Sindicato">O Sindicato</a>
 					<a href="servicos.html" title="Serviços">Serviços</a>
 					<a href="sindicalizados.html" title="Serviços">Sindicalizados</a>
@@ -122,7 +122,33 @@
 					<a href=".html" title=""></a>
 					-->
 				</nav>
+
+				<div id="navMobile">
+					<a href="#" title="">Menu <img src="img/menuMobile.png" alt=""></a>
+					<nav>
+						<a href="o_sindicato.html" title="O Sindicato">O Sindicato</a>
+						<a href="servicos.html" title="Serviços">Serviços</a>
+						<a href="sindicalizados.html" title="Serviços">Sindicalizados</a>
+						<a href="eventos.html" title="Eventos">Eventos</a>
+						<a href="sala_de_imprensa.html" title="Sala de imprensa">Sala de imprensa</a>
+						<a href="parceiros.html" title="parceiros">parceiros e convênios</a>
+						<a href="curriculo.html" title="curriculo">envio de curriculo</a>
+						<a href="downloads.html" title="downloads">downloads</a>
+						<a href="contato.html" title="contato">contato</a>
+
+						<a href="associe-se.html" title="">Associe-se</a>
+						<a href="cursos.html" title="">cursos</a>
+						<a href="licitacoes.html" title="">Licitações</a>
+						<a href="dicas.html" title="">Dicas e assessoria</a>
+						<a href="uteis.html" title="">informações úteis</a>
+						<a href="distancias.html" title="">distâncias</a>
+					</nav>
+				</div>
 			</div>
 		</section>
 	</header>
+
+
+
+
 
