--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -60,6 +60,7 @@ body
 							+desaturate
 							opacity: 0.5
 
+
 				nav
 					+grid(11)
 					float: right
@@ -103,6 +104,8 @@ body
 						text-transform: uppercase
 						&:hover
 							background: $brancoCinza
+				#navMobile
+					display: none
 	& > section
 		width: 100%
 		display: block
